Resolves: tdf#151711 don't use an intermediate Color to pass data around

just pass the desired value directly

Change-Id: Ib2a6d4c24a18e4a4d735d408e8179e3e204eff13
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141687
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 83334df9cfc34a2f740fe30db0f3359105cede83)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141712
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>